# ESP32_VB6824

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults.esp32c2
components/: VB6824+WIFI_开发文档_250612.xlsx
components/vb6824/: CMakeLists.txt  vb6824.c
main/: CMakeLists.txt  Working-send-audio.bkp  led.c  led.h  mqtt_handler.c  mqtt_handler.h  opus_wapper.c  opus_wapper.h  vb_demo.c
